--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-animated-slider": "^1.1.4",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "5.0.0",
